--- a/travis.cfg
+++ b/travis.cfg
@@ -13,7 +13,7 @@ parts +=
     coverage-sh
 
 [code-analysis]
-directory = ${buildout:directory}/collective/xsendfile
+directory = ${buildout:directory}/pretaweb/agls
 pre-commit-hook = False
 flake8-ignore = E501
 clean-lines = True
