Pin Products.PloneTestCase in buildout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,7 +9,8 @@ extends =
 package-name = pretaweb.agls
 package-extras = [test]
 eggs =
-
+test-eggs =
+    Products.PloneTestCase
 parts +=
     robot
     robot-server
